# led-control

./: README.md  led-client.sh
led-server/: CMakeLists.txt
led-server/sources/: communicator.cpp  communicator.h  led-widget.cpp  led-widget.h  main.cpp
led-server/sources/drivers/led-driver/: led-driver.cpp  led-driver.h
led-server/sources/drivers/pipe-driver/: pipe-driver-base.h  pipe-driver.cpp  pipe-driver.h
led-server/sources/led/: led-base.cpp  led-base.h  led-indicator.cpp  led-indicator.h
led-server/tests/: communicator-test.cpp  led-driver-test.cpp  pipe-driver-test.cpp
